core/main/default/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <description>This custom object will be used to capture the exceptions and log critical debug information for logging and troubleshooting purpose.</description>
    <label>Log</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>