core/main/default/objects/Log__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <description>The cause of the log. Mostly for exceptions.</description>
    <label>Cause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>