core/main/default/objects/Log__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description>The environment where the log occupied. It can be pulled from the environment variable. If required, it can contain the friendly domain.</description>
    <label>Environment</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>