core/main/default/objects/Log__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <description>The module  of the feature where log occurred</description>
    <label>Module</label>
    <length>255</length>
    <type>Text</type>
</CustomField>