core/main/default/objects/Log__c/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <description>The log associated with the object. Mostly for exceptions.</description>
    <label>Object Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>