core/main/default/objects/Log__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <description>Contains the path associated with the log. Mostly applicable for the errors or exceptions</description>
    <label>Path</label>
    <type>Url</type>
</CustomField>