core/main/default/objects/Log__c/fields/RecordIds__c.field-meta.xml
<CustomField>
    <fullName>RecordIds__c</fullName>
    <description>If any record(s) is associated with the log. For batch classes, records can be grouped together and saved. Comma separated.</description>
    <label>Record Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>