core/main/default/objects/Log__c/fields/RelatedObjects__c.field-meta.xml
<CustomField>
    <fullName>RelatedObjects__c</fullName>
    <description>Any other objects which are related to the exception. </description>
    <label>Related Objects</label>
    <length>255</length>
    <type>Text</type>
</CustomField>