core/main/default/objects/Log__c/fields/SalesforceOrgId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceOrgId__c</fullName>
    <description>The salesforce org id. Even though it might be in a region but the org might to staging, production, QA, etc.</description>
    <label>Salesforce Org Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>