core/main/default/objects/Log__c/fields/SessionId__c.field-meta.xml
<CustomField>
    <fullName>SessionId__c</fullName>
    <description>Contains the session id of the log. It will be encrypted using the deterministic algorithm in Shield to support sorting/filtering and SOQLs.</description>
    <label>Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>