core/main/default/objects/Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of log, Most for an exception, keeping the type of exception</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>