core/main/default/objects/Log__c/recordTypes/Debug.recordType-meta.xml
<RecordType>
    <fullName>Debug</fullName>
    <active>true</active>
    <description>Containing critical information required for troubleshooting</description>
    <label>Debug</label>

</RecordType>