core/main/default/objects/Log__c/recordTypes/Error.recordType-meta.xml
<RecordType>
    <fullName>Error</fullName>
    <active>true</active>
    <description>Containing the exceptions encountered at apex end</description>
    <label>Error</label>
</RecordType>