core/main/default/objects/Log__c/recordTypes/Fatal.recordType-meta.xml
<RecordType>
    <fullName>Fatal</fullName>
    <active>true</active>
    <label>Fatal</label>
</RecordType>