core/main/default/objects/Log__c/recordTypes/Trace.recordType-meta.xml
<RecordType>
    <fullName>Trace</fullName>
    <active>true</active>
    <label>Trace</label>
</RecordType>