core/main/default/objects/Log__c/recordTypes/Warn.recordType-meta.xml
<RecordType>
    <fullName>Warn</fullName>
    <active>true</active>
    <label>Warn</label>
</RecordType>